--- a/README
+++ b/README
@@ -1,14 +1,37 @@
 #What is audibl?
 
-**audibl** is a music metadata parser that places emphasis on extensibility, flexibility, performance, and atomicity.
+**audibl** is a high performance music metadata parser written for native Java.
 
-We currently support:
+##There are a million metadata parsers out there!  Why should I use yours?
+
+ - audibl is designed to the interface; that is, you should *never* have to instantiate an object to get an MP3.
+ - audibl is programmed to be as quick as possible, making use of Java 7's NIO library.
+ - audibl is meant to provide an easy way to read and manipulate the metadata of any song file.
+
+##What file types do you support?
+The initial release of audibl intends to have support for the following file types:
 
  - MP3
  - Ogg Vorbis
+ - FLAC
 
-..and support for others is coming soon!
+Support for other media file types is in the near future.
 
+##I'm interested!  How could I help?
+
+There are a number of ways you can help:
+
+  - Contribute code, either by adding your favorite file format, or fixing bugs.
+  - Contribute documentation, through the use of Javadocs.
+  - Contribute constructive criticism and bug reports.
+  - If this gets big enough, I'll set something up so you could contribute by buying me a beer. :)
+
+
+##What is the testing framework?
+
+We make use of Mockito and full unit tests.  Before any code can be accepted, unit tests must be written, and existing unit tests must still pass.
+
+---
 
 Use of Song "Circle" in tests:
 
@@ -16,4 +39,4 @@ This song was created by C418.  The terms for use are defined by a CC BY 3.0 lic
 http://creativecommons.org/licenses/by/3.0/.
 
  - C418 doesn't endorse the use of this track for this particular project.
- - I, on the other hand, really like C418's music, so go check him out.
+ - I do enjoy his music, though, so I encourage everyone to check him out.
