--- a/README
+++ b/README
@@ -1,14 +1,14 @@
-#What is audibl?
+# What is audibl? #
 
-**audibl** is a high performance music metadata parser written for native Java.
+audibl is a high performance music metadata parser written for native Java.
 
-##There are a million metadata parsers out there!  Why should I use yours?
+## There are a million metadata parsers out there!  Why should I use yours? ##
 
  - audibl is designed to the interface; that is, you should *never* have to instantiate an object to get an MP3.
  - audibl is programmed to be as quick as possible, making use of Java 7's NIO library.
  - audibl is meant to provide an easy way to read and manipulate the metadata of any song file.
 
-##What file types do you support?
+## What file types do you support? ##
 The initial release of audibl intends to have support for the following file types:
 
  - MP3
@@ -17,7 +17,7 @@ The initial release of audibl intends to have support for the following file typ
 
 Support for other media file types is in the near future.
 
-##I'm interested!  How could I help?
+## I'm interested!  How could I help? ##
 
 There are a number of ways you can help:
 
@@ -27,13 +27,13 @@ There are a number of ways you can help:
   - If this gets big enough, I'll set something up so you could contribute by buying me a beer. :)
 
 
-##What is the testing framework?
+## What is the testing framework? ##
 
 We make use of Mockito and full unit tests.  Before any code can be accepted, unit tests must be written, and existing unit tests must still pass.
 
 ---
 
-Use of Song "Circle" in tests:
+## Use of Song "Circle" in tests: ##
 
 This song was created by C418.  The terms for use are defined by a CC BY 3.0 license, which can be found at
 http://creativecommons.org/licenses/by/3.0/.
